--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,11 @@
 # Remove '-fmax-errors=5' from build_flags below to see all.
 #
 
+
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1768
 include_dir  = Marlin
 
 #
